# jg-observational-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-04-07-observational-memory-implementation.md  2026-04-13-sqlite-migration-pip-package.md  2026-04-14-tiered-reflections.md
docs/specs/: 2026-04-13-sqlite-migration-pip-package.md
docs/superpowers/plans/: 2026-04-07-observational-memory-implementation.md  2026-04-13-sqlite-migration-pip-package.md
docs/superpowers/specs/: 2026-03-18-observational-memory-design.md  2026-04-13-sqlite-migration-pip-package.md  2026-04-14-tiered-reflections-design.md
observer/: db.py  observe.py  prompts.py  reflect.py  slugs.py
scripts/: backfill.py  bootstrap-project.sh  init_db.sql
skills/: jg-context.md  load-context.md
src/observational_memory/: __init__.py  __main__.py  api_key.py  cli.py  config.py  db.py  observe.py  prompts.py  reflect.py  session_parser.py  slugs.py
tests/: test_api_key.py  test_cli.py  test_db.py  test_observe.py  test_reflect.py  test_session_parser.py  test_slugs.py
tests/fixtures/: sample_session.jsonl
